# test-project

./: Cargo.toml  build.rs
.github/workflows/: ci.yaml
shader/: Cargo.toml
shader/.cargo/: config
shader/src/: lib.rs
