[package]
name = "test-windows"
version = "0.1.0"
authors = ["Erin Power <erin.power@embark-studios.com>"]
edition = "2018"


[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cargo-sysroot = "0.8.0"
