[package]
name = "shader"
version = "0.1.0"
authors = ["Erin Power <erin.power@embark-studios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", branch = "vuild-system" }
